--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
     <body>
         <h1>Text Based Adventure Game</h1>
         <h3>Created by King4311</h3>
+
+        <p></p>
+
+        <hr/>
+
+        <p></p>
+
+        <h2>Links to pages for testing</h2>
+        <input type="button" value="death screen" onclick="return gotoDeath();">
+        <script>
+            function gotoDeath()
+            {
+                window.location.href = 'death.html'
+            }
+        </script>
     </body>
 </html>
