--- a/death.html
+++ b/death.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>DEATH</title>
-</head>
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>DEATH</title>
+
+        <link rel="stylesheet" href="css/death.css"
+    </head>
+    <body>
+        <h1>YOU DIED.</h1>
+    </body>
+</html>
