--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Text Adventure Game</title>
+        
+        <link rel="stylesheet" href="css/dark.css"
     </head>
 
     <body>
@@ -16,12 +18,6 @@
         <p></p>
 
         <h2>Links to pages for testing</h2>
-        <input type="button" value="death screen" onclick="return gotoDeath();">
-        <script>
-            function gotoDeath()
-            {
-                window.location.href = 'death.html'
-            }
-        </script>
+        <input type="button" value="death screen" onclick="return gotoPage(death.html);">
     </body>
 </html>
