--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <title>Text Adventure Game</title>
         
-        <link rel="stylesheet" href="css/dark.css"
+        <link rel="stylesheet" href="css/dark.css">
     </head>
 
     <body>
