--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <p></p>
 
         <h2>Links to pages for testing</h2>
-        <input type="button" value="death screen" onclick="return gotoPage(death.html);">
+        <input type="button" value="death screen" onclick="function changewindow() {window.location.href='death.html'}">
     </body>
 </html>
