--- a/death.html
+++ b/death.html
@@ -8,5 +8,20 @@
     </head>
     <body>
         <h1>YOU DIED.</h1>
+
+        <input type="button" value="index screen" onclick="return gotoIndex();">
+        <script>
+            function gotoIndex()
+            {
+                window.location.href = "index.html";
+            }
+        </script>
+        <input type="button" value="game screen" onclick="return gotoGame();">
+        <script>
+            function gotoGame
+            {
+                window.location.href = "game.html";
+            }
+        </script>
     </body>
 </html>
