--- a/game.html
+++ b/game.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Text Adventure Game</title>
-</head>
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>Text Adventure Game</title>
+    </head>
+    
+    <body>
+        <input type="button" value="death screen" onclick="return gotoDeath();">
+            <script>
+                function gotoDeath()
+                {
+                    window.location.href = "death.html";
+                }
+            </script>
+            <input type="button" value="index screen" onclick="return gotoIndex();">
+            <script>
+                function gotoIndex
+                {
+                    window.location.href = "index.html";
+                }
+            </script>
+    </body>
+</html>
